SERVER-78703 Remove check in the analyzeShardKey command that expects number of orphaned documents <= total number of documents

(cherry picked from commit 74b77ed4017710c197913ece67de73d09fba578c)